--- a/style/style.css
+++ b/style/style.css
@@ -21,10 +21,12 @@ header{
     padding: 30px 115px  30px 115px;
     background: rgba(204, 214, 240, 0.22);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
+    flex-wrap: wrap;
 }
 #buttons{
     display: flex;
     gap: 30px;
+    flex-wrap: wrap;
 }
 header button{
     width: 195px;
@@ -75,6 +77,148 @@ header button{
     line-height: 30px;
     color: #FFFFFF;
 }
+@media (max-width: 620px){
+    header{
+        padding: 0;
+    }
+    #slogan{
+        margin: auto;
+    }
+}
+
+/* Design Proposta */
+#part1{
+    display: flex;
+    background: #0D4971;
+    justify-content: center;
+    align-items: center;
+    padding: 95px 20px 90px 20px;
+    flex-wrap: wrap;
+}
+#part1 div h2{
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 58px;
+    color: #4FFFD5;
+}
+#part1 div{
+    width: 75%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+}
+#part1 div p{
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 36px;
+    text-align: center;
+    color: #FFFFFF;
+}
+@media (max-width: 1289px){
+   #part1 div{
+        width: 100%;
+        margin: auto;
+   }
+}
+
+/* Design Base de Dados */
+#part2{
+    background: #24648E;
+    display: flex;
+    justify-content: space-around;
+    padding: 50px 0px 50px 0px;
+    align-items: center;
+    flex-wrap: wrap;
+}
+#part2 p{
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 36px;
+    text-align: justify;
+    color: #FFFFFF;
+    width: 570px;
+}
+
+/* Design dos Recursos Adicionais */
+#part3{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 50px 0px 50px 0px;
+    background: #4E7DA6;
+    flex-wrap: wrap-reverse;
+}
+#part3 p{
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 36px;
+    text-align: justify;
+    color: #FFFFFF;
+    width: 570px;
+}
+
+/* Design da Manutenção e Verificação */
+#part4{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 50px 0px 50px 0px;
+    background: #639CBF;
+    flex-wrap: wrap;
+}
+#part4 p{
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 36px;
+    text-align: justify;
+    color: #FFFFFF;
+    width: 570px;
+}
+
+/* Design Footer */
+footer{
+    background: #1E3E59;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 38px 0px 10px 0px;
+    gap: 30px;
+}
+footer h3{
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 36px;
+    text-align: center;
+    color: #FFFFFF;
+}
+footer p{
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 22px;
+    text-align: center;
+    color: #FFFFFF;
+}
+#redeSociais{
+    display: flex;
+    gap: 50px;
+}
+
 
 /* Modal do login Design */
 #modalLogin{
@@ -92,6 +236,42 @@ header button{
     margin-top: 50px;
 }
 
+/* Modal criar Design */
+#modalCadastrar{
+    width: 983px;
+    height: 730px;
+    background: #fff;
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#entrarGoogle{
+    border: none;
+    background: #fff;
+    width: 100%;
+    cursor: pointer;
+    border-bottom: 1px solid #000;
+    padding: 15px 0px 15px 0px ;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 25px;
+    line-height: 30px;
+    text-align: center;
+    color: #838383;
+    text-decoration: none;
+    margin-top: 50px;
+    background: url("../icons/google.png");
+    background-repeat: no-repeat;
+    background-position: 100px 0px;
+}
+
+#name{
+    background: url("../icons/nameUser.png");
+    background-repeat: no-repeat;
+    background-position:  5px 10px;
+}
 /* Input geral */
 #modalLogin input, #modalCadastrar input{
     width: 550px;
@@ -159,39 +339,22 @@ header button{
     position: fixed;
 }
 
-/* Modal criar Design */
-#modalCadastrar{
-    width: 983px;
-    height: 730px;
-    background: #fff;
-    border-radius: 15px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+@media (max-width: 620px){
+    #part2 img, #part3 img, #part4 img{
+        width: 80%;
+    }
+    #part2, #part3, #part4{
+        padding-left: 20px;
+        padding-right: 20px;
+    }
 }
-#entrarGoogle{
-    border: none;
-    background: #fff;
-    width: 100%;
-    cursor: pointer;
-    border-bottom: 1px solid #000;
-    padding: 15px 0px 15px 0px ;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 25px;
-    line-height: 30px;
-    text-align: center;
-    color: #838383;
-    text-decoration: none;
-    margin-top: 50px;
-    background: url("../icons/google.png");
-    background-repeat: no-repeat;
-    background-position: 100px 0px;
-}
-
-#name{
-    background: url("../icons/nameUser.png");
-    background-repeat: no-repeat;
-    background-position:  5px 10px;
+@media (max-width: 535px){
+    #slogan{
+        margin: 0;
+        padding: 5px;
+        width: 80%;
+        margin: auto;
+        align-items: center;
+        justify-content: center;
+    }
 }
